feat(ai): Introduce compound node descriptor pattern for AI cluster execution
- Implemented `AiClusterCompoundDescriptorProvider` to materialize AI cluster providers as workflow nodes.
- Added `AiClusterProviderResolver` for resolving providers with default fallback support.
- Introduced `CompoundChildDescriptor`, `CompoundNodeDescriptor`, and related abstractions for child node materialization.
- Updated schema to support `childNodeKeys` and `parentNodeKey`.
- Enhanced node materializer to manage parent-child relationships systematically.
- Added utilities for deterministic child key generation with reserved delimiter (`::`).
- Updated documentation and examples.